--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@api-platform/client-generator",
-  "version": "0.7.3",
+  "name": "@cobrasphere/symfony-api-platform-client-generator",
+  "version": "0.7.3-cs",
   "description": "Generate apps built with Next, Nuxt, Quasar, React, React Native, Vue or Vuetify for any API documented using Hydra or OpenAPI",
   "files": [
     "*.md",
